--- a/templates/roles.yaml
+++ b/templates/roles.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: app-user
-  namespace: {{.Values.name}}
+  namespace: {{.Release.Namespace}}
 rules:
 - apiGroups: [""]
   resources: ["configmaps","pods","pods/log","pods/exec","secrets","services","serviceaccounts","persistentvolumeclaims","replicasets"]
@@ -33,7 +33,7 @@ metadata:
   name: app-user
 subjects:
 - kind: Group
-  name: {{.Values.name}}
+  name: {{.Release.Namespace}}
   apiGroup: rbac.authorization.k8s.io
 - kind: ServiceAccount
   name: hub
