--- a/templates/try.yaml
+++ b/templates/try.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.repo}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -75,3 +76,4 @@ spec:
     kind: MutatingWebhookConfiguration
     jsonPointers:
     - /webhooks/0/clientConfig/caBundle
+{{- end }}
