--- a/templates/try.yaml
+++ b/templates/try.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.repo}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -29,7 +28,7 @@ spec:
       releaseName: user
       version: v3
       values: |
-        repo: asdfasd
+        repo: https://github.com/findi-io/try-{{.Release.Namespace}}.git
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
@@ -76,4 +75,3 @@ spec:
     kind: MutatingWebhookConfiguration
     jsonPointers:
     - /webhooks/0/clientConfig/caBundle
-{{- end }}
