--- a/templates/hosting.yaml
+++ b/templates/hosting.yaml
@@ -1,7 +1,8 @@
+{{- if not empty .Values.repo}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: try-{{.Release.Namespace}}
+  name: hosting-{{.Release.Namespace}}
   # You'll usually want to add your resources to the argocd namespace.
   namespace: argocd
   # Add this finalizer ONLY if you want these to cascade delete.
@@ -9,24 +10,16 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
   # Add labels to your application object.
   labels:
-    name: try
+    name: hosting
 spec:
   # The project the application belongs to.
-  project: {{.Release.Namespace}}
+  project: user-{{.Release.Namespace}}
 
   # Source of the application manifests
   source:
-    repoURL: https://github.com/findi-io/try-{{.Release.Namespace}}.git  # Can point to either a Helm chart repo or a git repo.
-    targetRevision: HEAD  # For Helm, this refers to the chart version.
-    path: "."  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
-
-    helm:
-      passCredentials: false # If true then adds --pass-credentials to Helm commands to pass credentials to all domains
-      # Extra parameters to set (same as setting through values.yaml, but these take precedence)
-
-      # Release name override (defaults to application name)
-      releaseName: user
-      version: v3
+    repoURL: {{.Values.repo}}  # Can point to either a Helm chart repo or a git repo.
+    targetRevision: {{.Values.branch}}  # For Helm, this refers to the chart version.
+    path: {{.Values.path}}  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
@@ -73,3 +66,4 @@ spec:
     kind: MutatingWebhookConfiguration
     jsonPointers:
     - /webhooks/0/clientConfig/caBundle
+{{- end }}
