--- a/templates/argocd-repo.yaml
+++ b/templates/argocd-repo.yaml
@@ -6,6 +6,6 @@ metadata:
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
-  project: {{.Release.Namespace}}
-  url: https://github.com/findi-io/try-{{.Release.Namespace}}.git
-  password: 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
+  project: user-{{.Release.Namespace}}
+  url: <github-repo>
+  password: <github-repo-token>
