--- a/templates/argocd-repo.yaml
+++ b/templates/argocd-repo.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
+  annotations:
+    avp.kubernetes.io/path: "{{.Release.namespace}}/default"
 stringData:
   project: user-{{.Release.Namespace}}
   url: <github-repo>
