--- a/templates/hosting.yaml
+++ b/templates/hosting.yaml
@@ -1,4 +1,3 @@
-{{- if not (empty .Values.repo)}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -11,15 +10,17 @@ metadata:
   # Add labels to your application object.
   labels:
     name: hosting
+  annotations:
+    avp.kubernetes.io/path: "{{.Release.namespace}}/default"
 spec:
   # The project the application belongs to.
   project: user-{{.Release.Namespace}}
 
   # Source of the application manifests
   source:
-    repoURL: {{.Values.repo}}  # Can point to either a Helm chart repo or a git repo.
-    targetRevision: {{.Values.branch}}  # For Helm, this refers to the chart version.
-    path: {{.Values.path}}  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
+    repoURL: <repo>  # Can point to either a Helm chart repo or a git repo.
+    targetRevision: <branch>  # For Helm, this refers to the chart version.
+    path: <path>  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
@@ -66,4 +67,3 @@ spec:
     kind: MutatingWebhookConfiguration
     jsonPointers:
     - /webhooks/0/clientConfig/caBundle
-{{- end }}
