--- a/templates/project.yaml
+++ b/templates/project.yaml
@@ -75,9 +75,9 @@ spec:
   - name: admin
     description: admin privileges to {{.Release.Namespace}}
     policies:
-    - p, proj:{{.Release.Namespace}}:admin, applications, *, user-{{.Release.Namespace}}/*, allow
-    - p, proj:{{.Release.Namespace}}:admin, repositories, *, user-{{.Release.Namespace}}/*, allow
-    - p, proj:{{.Release.Namespace}}:admin, clusters, get, *, allow
-    - p, proj:{{.Release.Namespace}}:admin, logs, get, user-{{.Release.Namespace}}/*, allow
+    - p, proj:user-{{.Release.Namespace}}:admin, applications, *, user-{{.Release.Namespace}}/*, allow
+    - p, proj:user-{{.Release.Namespace}}:admin, repositories, *, user-{{.Release.Namespace}}/*, allow
+    - p, proj:user-{{.Release.Namespace}}:admin, clusters, get, *, allow
+    - p, proj:user-{{.Release.Namespace}}:admin, logs, get, user-{{.Release.Namespace}}/*, allow
     groups:
     - {{.Release.Namespace}}
