--- a/templates/hosting.yaml
+++ b/templates/hosting.yaml
@@ -11,7 +11,7 @@ metadata:
   labels:
     name: hosting
   annotations:
-    avp.kubernetes.io/path: "{{.Release.Namespace}}/data/default"
+    avp.kubernetes.io/path: "findi/data/{{.Release.Namespace}}"
 spec:
   # The project the application belongs to.
   project: user-{{.Release.Namespace}}
@@ -22,8 +22,6 @@ spec:
     targetRevision: <branch>  # For Helm, this refers to the chart version.
     path: <path>  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
   # Destination cluster and namespace to deploy the application
-    plugin:
-      name: argocd-vault-plugin-helm
   destination:
     server: https://kubernetes.default.svc
     # The namespace will only be set for namespace-scoped resources that have not set a value for .metadata.namespace
