--- a/templates/roles.yaml
+++ b/templates/roles.yaml
@@ -1,4 +1,11 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  namespace: {{.Release.Namespace}}
+  name: notebook
+automountServiceAccountToken: true
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -38,6 +45,9 @@ subjects:
 - kind: ServiceAccount
   name: hub
   namespace: app
+- kind: ServiceAccount
+  name: {{.Release.Namespace}}
+  namespace: notebook
 roleRef:
   kind: Role
   name: app-user
