--- a/templates/project.yaml
+++ b/templates/project.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: user-{{.Release.Namespace}}
+  name: proj-{{.Release.Namespace}}
   namespace: argocd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
