--- a/templates/hosting.yaml
+++ b/templates/hosting.yaml
@@ -18,7 +18,7 @@ spec:
   source:
     repoURL: https://github.com/findi-io/proj-{{.Release.Namespace}}.git  # Can point to either a Helm chart repo or a git repo.
     targetRevision: main  # For Helm, this refers to the chart version.
-    path: .  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
+    path: "."  # This has no meaning for Helm charts pulled directly from a Helm repo instead of git.
   destination:
     server: https://kubernetes.default.svc
     # The namespace will only be set for namespace-scoped resources that have not set a value for .metadata.namespace
