--- a/templates/project.yaml
+++ b/templates/project.yaml
@@ -23,6 +23,9 @@ spec:
     name: gke-us-east1
   - namespace: {{.Release.Namespace}}
     name: gke-asia-northeast1
+  clusterResourceWhitelist:
+  - group: ''
+    kind: Namespace
   # Allow all namespaced-scoped resources to be created, except for ResourceQuota, LimitRange, NetworkPolicy
   namespaceResourceBlacklist:
   - group: ''
